Updates reasoning examples